--- a/client/src/App.css
+++ b/client/src/App.css
@@ -22,3 +22,17 @@ html body #root .removeOverflow{
     width: 100%;
     height: 100%;
 }
+
+/* used for the floating html elements in the scene */
+.label > div
+{
+    font-family: Helvetica, Arial;
+    position: absolute;
+    background: #00000088;
+    color: white;
+    padding: 15px;
+    white-space: nowrap;
+    overflow: hidden;
+    border-radius: 30px;
+    user-select: none;
+}
