working at making the profile stylying not look so.... bad. it's still not great yet
just trying to commit again/change my info after the macos reboot

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -36,3 +36,13 @@ html body #root .removeOverflow{
     border-radius: 30px;
     user-select: none;
 }
+
+
+/* Where i'll be working on the profile page CSS */
+
+.equal-card-height{
+    display: flex;
+    align-items: stretch;
+    flex: 1;
+}
+
